# slambook2-practice

./: README.md
SLAM_demo/: CMakeLists.txt
SLAM_demo/app/: run_kitti_stereo.cpp
SLAM_demo/cmake_modules/: FindG2O.cmake
SLAM_demo/config/: default.yaml
SLAM_demo/include/myslam/: algorithm.h  camera.h  common_include.h  config.h  feature.h  frame.h  frontend.h  g2o_types.h  map.h  mappoint.h  viewer.h  visual_odometry.h
SLAM_demo/src/: CMakeLists.txt  backend.cpp  camera.cpp  config.cpp  dataset.cpp  feature.cpp  frame.cpp  frontend.cpp  map.cpp  mappoint.cpp  viewer.cpp  visual_odometry.cpp
ch3/: CMakeLists.txt
ch3/examples/: CMakeLists.txt  coordinateTransform.cpp  plotTrajectory.cpp
ch3/useGeometry/: CMakeLists.txt  eigenGeometry.cpp
ch3/visualizeGeometry/: CMakeLists.txt  visualizeGeometry.cpp
ch4/: CMakeLists.txt  useSophus.cpp
ch4/example/: CMakeLists.txt  trajectoryError.cpp
ch5/: CMakeLists.txt
ch5/imageBasics/: imageBasics.cpp
ch6/: CMakeLists.txt  ceresCurveFitting.cpp  g2oCurveFitting.cpp  gaussNewton.cpp
ch6/cmake/: FindG2O.cmake
ch7/: CMakeLists.txt  orb_cv.cpp  orb_self.cpp  pose_estimation_2d2d.cpp  pose_estimation_3d2d.cpp  triangulation.cpp
ch8/: CMakeLists.txt  optical_flow.cpp
ch9/: CMakeLists.txt  SnavelyReprojectionError.h  bundle_adjustment_ceres.cpp  rotation.h
